melhorando a pagina principal

--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+    <main class="principal">
         <form action="" class="formulario">
             <label for="nomesobrenome">Nome e Sobrenome</label>
             <input type="text" id="nomesobrenome" placeholder="Fulano da Silva" class="input-padrao" required>
