--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="principal">
         <ul class="produtos">
             <li>
                 <h2>Cabelo</h2>
@@ -32,13 +32,13 @@
             <li>
                 <h2>Barba</h2>
                 <img src="assets/barba.jpg" alt="">
-                <p class="descr">Corte e desenho profissional de barba, como o cliente preferir!</p>
+                <p class="descr">Corte e desenho profissional de barba!</p>
                 <p class="preço">R$ 18,00</p>
             </li>
             <li>
                 <h2>Cabelo + Barba</h2>
                 <img src="assets/cabelo+barba.jpg" alt="">
-                <p class="descr">Pacote completo de cabelo e barba, como o cliente preferir!</p>
+                <p class="descr">Pacote completo de cabelo e barba!</p>
                 <p class="preço">R$ 35,00</p>
             </li>
         </ul>
