--- a/index.html
+++ b/index.html
@@ -6,50 +6,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="CSS/style-home.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
     <header>
-        <h1>Barbearia Alura</h1>
-        <nav class="nav-cabeçalho">
-            <h3 class="cabeçalho"><a href="index.html">Home</a></h3>
-            <h3 class="cabeçalho"><a href="produtos.html">Produtos</a></h3>
-            <h3 class="cabeçalho" id="contato"><a href="contato.html">Contato</a></h3>
-        </nav>
+        <div class="arrumaCabeçalho">
+            <img class="logo" src="assets/logo.png" alt="Logo da Barbearia ALura">
+            <nav>
+                <h3 class="links" id="Home"><a class="cabeçalho" href="index.html">Home</a></h3>
+                <h3 class="links"><a class="cabeçalho" href="produtos.html">Produtos</a></h3>
+                <h3 class="links"><a class="cabeçalho" href="contato.html">Contato</a></h3>
+            </nav>
+        </div>
     </header>
-    <img id="banner" src="assets/banner.jpg" alt="">
-    <div class="principal">
-        <h2>Sobre a Barbearia Alura</h2>
-        <p>Localizada no coração da cidade a <b>Barbearia Alura </b> traz para o mercado o que
-            há de melhor para o seu
-            cabelo e
-            barba.
-            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <img class="banner" src="assets/banner.jpg" alt="">
+    <main class="principal-index">
+        <!--Section utilizada pois um bloco fechado fala do mesmo conteúdo, div é uma divisão visual no coidgo, já section é uma divisão de conteúdo-->
+        <section class="main">
+            <h2 class="h2-index">Sobre a Barbearia Alura</h2>
+            <img class="utensilios" src="assets/utensilios.jpg" alt="Utensilios da Barbearia Alura">
+            <p>Localizada no coração da cidade a <b>Barbearia Alura </b> traz para o mercado o que
+                há de melhor para o seu
+                cabelo e
+                barba.
+                Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-        <p id="missao"><i>Nossa missão é:<b>"Proporcionar auto-estima e qualidade de vida
-                    aos clientes."</b></i></p>
+            <p id="missao"><i>Nossa missão é:<b>"Proporcionar auto-estima e qualidade de vida
+                        aos clientes."</b></i></p>
 
-        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
-            atendimento possui padrão de
-            excelência
-            e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-    </div>
-
-    <div class="beneficios">
-        <h3>Benefícios</h3>
-        <ul>
-            <li class="itens">Atendimento aos Clientes</li>
-            <li class="itens">Espaço diferenciado</li>
-        </ul>
-        <img id="beneficios" src="assets/beneficios.jpg" alt="">
-        <ul>
-            <li class="itens1">Localização</li>
-            <li class="itens1">Profissionais Qualificados</li>
-        </ul>
-
-    </div>
+            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O
+                atendimento possui padrão de
+                excelência
+                e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        </section>
+        <section class="mapa">
+            <h2 class="h2-index">Nosso Estabelecimento</h2>
+            <p>Nosso estabelecimento está localizado no coração da cidade.</p>
+            <div class="mapa-em-si">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.448598130837!2d-46.63465338444878!3d-23.588239368471864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-PT!2sbr!4v1625509404661!5m2!1spt-PT!2sbr"
+                    width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </section>
+        <section class="beneficios">
+            <h2 class="h2-index">Benefícios</h2>
+            <div class="conteudo-beneficios">
+                <ul class="lista-itens">
+                    <li class="itens">Atendimento aos Clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localização</li>
+                    <li class="itens">Profissionais Qualificados</li>
+                    <li class="itens">Pontualidade</li>
+                    <li class="itens">Limpeza</li>
+                </ul><img class="imagem-beneficios" src="assets/beneficios.jpg" alt="Foto benefícios Barbearia Alura">
+            </div>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <img src="assets/logo-branco.png" alt="Logo da Barbearia ALura">
+        <p class="texto">&copy; Copyright Barbearia ALura - 2019</p>
+    </footer>
 </body>
 
 </html>
