adicionando links para todas as paginas

--- a/produtos.html
+++ b/produtos.html
@@ -44,8 +44,25 @@
         </ul>
     </main>
     <footer>
-        <img src="assets/logo-branco.png" alt="">
+        <img src="assets/logo-branco.png" alt="Logo da Barbearia ALura">
         <p class="texto">&copy; Copyright Barbearia ALura - 2019</p>
+        <div class="divisao-links">
+            <ul class="lista-links">
+                <li>
+                    <a href="https://www.instagram.com/joao_pedrossantos/">
+                        <img src="assets/instagram.png" alt="">
+                    </a>
+                    <a href="https://github.com/Joao7878">
+                        <img class="github" src="assets/GitHub_logo.png" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-santos-556a44202/">
+                        <img class="linkedin" src="assets/linkedin-icon-logo-png-transparent.png" alt="">
+                    </a>
+                </li>
+                <li>
+
+                </li>
+            </ul>
     </footer>
 </body>
 
