--- a/produtos.html
+++ b/produtos.html
@@ -12,12 +12,15 @@
 
 <body>
     <header>
-        <div class="arrumaCabeçalho">
-            <img class="logo" src="assets/logo.png" alt="">
+        <div class="caixa">
+            <h1><img src="assets/logo.png"></h1>
+
             <nav>
-                <h3 class="links" id="Home"><a class="cabeçalho" href="index.html">Home</a></h3>
-                <h3 class="links"><a class="cabeçalho" href="produtos.html">Produtos</a></h3>
-                <h3 class="links"><a class="cabeçalho" href="contato.html">Contato</a></h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
             </nav>
         </div>
     </header>
