--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
@@ -15,12 +15,15 @@
 
 <body>
     <header>
-        <div class="arrumaCabeçalho">
-            <img class="logo" src="assets/logo.png" alt="Logo da Barbearia ALura">
+        <div class="caixa">
+            <h1><img src="assets/logo.png"></h1>
+
             <nav>
-                <h3 class="links" id="Home"><a class="cabeçalho" href="index.html">Home</a></h3>
-                <h3 class="links"><a class="cabeçalho" href="produtos.html">Produtos</a></h3>
-                <h3 class="links"><a class="cabeçalho" href="contato.html">Contato</a></h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -66,7 +69,7 @@
                 </ul><img class="imagem-beneficios" src="assets/beneficios.jpg" alt="Foto benefícios Barbearia Alura">
             </div>
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY"
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
